added the image files for proper rendering.

--- a/src/pages/CustomersList1.module.css
+++ b/src/pages/CustomersList1.module.css
@@ -267,6 +267,7 @@
 .td5 {
   position: relative;
   padding-bottom: var(--padding-xl);
+  padding-left: var(--padding-xl);
 }
 .deleteEntry1,
 .editEntry1 {
